src/main/java/com/example/springsecurityregistration/web/error/UnauthorizedException.java
package com.example.springsecurityregistration.web.error;

public class UnauthorizedException extends RuntimeException {

    public UnauthorizedException(String message) {
        super(message);
    }
}
